// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonExternalLink /> renders button with different classes dependent on props renders class btn-custom-small 1`] = `
<DocumentFragment>
  <a
    class="btn btn-custom-small"
    href="http://forum.conferencebuddy.io/"
  >
    Test Button Linktext
  </a>
</DocumentFragment>
`;

exports[`<ButtonExternalLink /> renders button with different classes dependent on props renders class btn-primary 1`] = `
<DocumentFragment>
  <a
    class="btn btn-custom btn-primary"
    href="http://forum.conferencebuddy.io/"
  >
    Test Button Linktext
  </a>
</DocumentFragment>
`;

exports[`<ButtonExternalLink /> renders button with different classes dependent on props renders class btn-secondary 1`] = `
<DocumentFragment>
  <a
    class="btn btn-custom btn-secondary"
    href="http://forum.conferencebuddy.io/"
  >
    Test Button Linktext
  </a>
</DocumentFragment>
`;
